--- a/.env
+++ b/.env
@@ -25,7 +25,7 @@ APP_SECRET=dcd718e5e378efd6aa66a8d7423b1656
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
-DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
+DATABASE_URL="mysql://root:pawel@127.0.0.1:3306/ddd_api?serverVersion=5.7"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
