--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "doctrine/orm": "^2.14",
         "doctrine/persistence": "^3.1",
         "ramsey/uuid": "^4.7",
+        "ramsey/uuid-doctrine": "^2.0",
         "symfony/console": "6.2.*",
         "symfony/dotenv": "6.2.*",
         "symfony/flex": "^2",
