Infracture for Symfony

--- a/.env
+++ b/.env
@@ -16,6 +16,7 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
+APP_DEBUG=1
 APP_SECRET=dcd718e5e378efd6aa66a8d7423b1656
 ###< symfony/framework-bundle ###
 
@@ -32,5 +33,6 @@ DATABASE_URL="mysql://root:pawel@127.0.0.1:3306/ddd_api?serverVersion=5.7"
 # Choose one of the transports below
 # MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
 # MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
-MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
+MESSENGER_TRANSPORT_DSN=amqp://pawel:pk86ha2010s@localhost:5672/%2f/messages
+MESSENGER_TRANSPORT_VHOST=email_broker
 ###< symfony/messenger ###
