--- a/apps/api/config/services.yaml
+++ b/apps/api/config/services.yaml
@@ -29,3 +29,7 @@ services:
   Owl\Shared\Infrastructure\Symfony\EventListener\RequestValidationExceptionListener:
       tags:
         - { name: kernel.event_listener, event: kernel.exception, priority: 64 }
+
+imports:
+    - { resource: services/data_provider.yaml }
+    - { resource: services/filter.yaml }
