--- a/src/Article/Infrastructure/Validate/Article.yaml
+++ b/src/Article/Infrastructure/Validate/Article.yaml
@@ -2,3 +2,5 @@ Owl\Article\Application\Dto\CreateArticleRequestDto:
   properties:
     title:
         - NotBlank: ~
+    comment:
+      - Valid: ~
