--- a/apps/api/config/services/data_provider.yaml
+++ b/apps/api/config/services/data_provider.yaml
@@ -1,7 +1,4 @@
 services:
-  _defaults:
-    autoconfigure: true
-    autowire: true
   owl.registry.date_provider_filter:
     class: Owl\Shared\Domain\DataProvider\Registry\FilterRegistry
     arguments:
@@ -13,7 +10,18 @@ services:
     arguments:
       - '@owl.registry.date_provider_filter'
 
+  owl.data_provider.doctrine.collection_type_builder:
+    class: Owl\Shared\Infrastructure\DataProvider\Orm\Builder\CollectionTypeBuilder
+    arguments:
+      - '@owl.registry.date_provider_filter'
+      # - '@owl.data_provider.doctrine.filter_applicator'
+
   Owl\Shared\Domain\DataProvider\CollectionDataProviderInterface:
     class: Owl\Shared\Infrastructure\DataProvider\CollectionDataProvider
     arguments:
-      - '@owl.data_provider.doctrine.filter_factory_builder'
+      - '@owl.data_provider.doctrine.collection_type_builder'
+
+  # owl.data_provider.doctrine.filter_applicator:
+  #   class: Owl\Shared\Infrastructure\DataProvider\Orm\Applicator\FilterApplicator
+
+
