--- a/apps/api/config/services/data_provider.yaml
+++ b/apps/api/config/services/data_provider.yaml
@@ -5,23 +5,25 @@ services:
       - 'Owl\Shared\Domain\DataProvider\Filter\FilterInterface'
       - 'data provider filter'
 
-  owl.data_provider.doctrine.filter_factory_builder:
-    class: Owl\Shared\Infrastructure\DataProvider\Orm\FilterFactoryBuilder
-    arguments:
-      - '@owl.registry.date_provider_filter'
-
   owl.data_provider.doctrine.collection_type_builder:
     class: Owl\Shared\Infrastructure\DataProvider\Orm\Builder\CollectionTypeBuilder
     arguments:
       - '@owl.registry.date_provider_filter'
-      # - '@owl.data_provider.doctrine.filter_applicator'
 
   Owl\Shared\Domain\DataProvider\CollectionDataProviderInterface:
     class: Owl\Shared\Infrastructure\DataProvider\CollectionDataProvider
     arguments:
       - '@owl.data_provider.doctrine.collection_type_builder'
 
-  # owl.data_provider.doctrine.filter_applicator:
-  #   class: Owl\Shared\Infrastructure\DataProvider\Orm\Applicator\FilterApplicator
+  owl.data_provider.doctrine.request_params_factory:
+    class: Owl\Shared\Domain\DataProvider\Factory\RequestParamsFactory
+    arguments:
+      - '%data_provider%'
+
+  Owl\Shared\Infrastructure\Symfony\Http\ArgumentResolver\RequestDataProviderParamsResolver:
+      arguments:
+        - '@owl.data_provider.doctrine.request_params_factory'
+      tags:
+        - { name: controller.argument_value_resolver, priority: 64 }
 
 
