--- a/apps/api/config/services/filter.yaml
+++ b/apps/api/config/services/filter.yaml
@@ -3,7 +3,7 @@ services:
     class: Owl\Shared\Infrastructure\DataProvider\Orm\Filter\StringFilter
     tags: 
       - { name: 'owl.data_provider_filter' }
-  owl.data_provider.filter.article_index:
-    class: Owl\Article\Application\Filter\ArticleSearchFilter
-    tags: 
-      - { name: 'owl.data_provider_filter' }
+  # owl.data_provider.filter.article_index:
+  #   class: Owl\Article\Application\Filter\ArticleSearchFilter
+  #   tags: 
+  #     - { name: 'owl.data_provider_filter' }
