--- a/apps/api/config/services/data_provider.yaml
+++ b/apps/api/config/services/data_provider.yaml
@@ -8,7 +8,8 @@ services:
   owl.data_provider.doctrine.collection_type_builder:
     class: Owl\Shared\Infrastructure\DataProvider\Orm\Builder\CollectionTypeBuilder
     arguments:
-      - '@owl.registry.date_provider_filter'
+      - '@owl.data_provider.doctrine.orm.factory_query_builder'
+      - !tagged_iterator data_provider.doctrine.orm.applicator.collection
 
   Owl\Shared\Domain\DataProvider\CollectionDataProviderInterface:
     class: Owl\Shared\Infrastructure\DataProvider\CollectionDataProvider
@@ -20,10 +21,34 @@ services:
     arguments:
       - '%data_provider%'
 
+  owl.data_provider.doctrine.orm.factory_query_builder:
+    class: Owl\Shared\Infrastructure\DataProvider\Orm\Factory\QueryBuilderFactory
+    arguments:
+      - '@doctrine'
+
+  owl.data_provider.doctrine.orm.filter_applicator:
+    class: Owl\Shared\Infrastructure\DataProvider\Orm\Applicator\FilterApplicator
+    arguments:
+      - '@owl.data_provider.doctrine.orm.field_resolver'
+      - '@owl.registry.date_provider_filter'
+    tags:
+      - { name: data_provider.doctrine.orm.applicator.collection, priority: -64 }
+      - { name: data_provider.doctrine.orm.applicator.item, priority: -64 }
+
+  owl.data_provider.doctrine.orm.sort_applicator:
+    class: Owl\Shared\Infrastructure\DataProvider\Orm\Applicator\SortApplicator
+    arguments:
+      - '@owl.data_provider.doctrine.orm.field_resolver'
+    tags:
+      - { name: data_provider.doctrine.orm.applicator.collection, priority: -96 }
+
   Owl\Shared\Infrastructure\Symfony\Http\ArgumentResolver\RequestDataProviderParamsResolver:
       arguments:
         - '@owl.data_provider.doctrine.request_params_factory'
       tags:
         - { name: controller.argument_value_resolver, priority: 64 }
+
+  owl.data_provider.doctrine.orm.field_resolver:
+    class: Owl\Shared\Infrastructure\DataProvider\Orm\Resolver\FieldResolver
 
 
