--- a/apps/api/config/parameters/data_provider.yaml
+++ b/apps/api/config/parameters/data_provider.yaml
@@ -2,8 +2,12 @@ parameters:
     data_provider:
       sorting: 
         param_name: sort
-      pagination:
+      filtering:
         param_filter_name: filters
+      pagination:
+        fetch_join_collection: true
+        use_output_walkers: false
         param_per_page_name: per-page
         param_page_name: page
         default_per_page: 20
+        allowed_per_page: [10,25,50,100]
