--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "symfony/property-info": "6.2.*",
         "symfony/runtime": "6.2.*",
         "symfony/serializer": "6.2.*",
+        "symfony/uid": "6.2.*",
         "symfony/validator": "6.2.*",
         "symfony/yaml": "6.2.*"
     },
